# shop_scraper

./: README.md  pyproject.toml
src/hm_scraper/: config.py  main.py  models.py
src/hm_scraper/services/: parser.py  pipelines.py
src/hm_scraper/spiders/: hm_spider.py
tests/: test_models.py  test_parser.py
